Finished getting rule data from Google Sheets

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 credentials.txt
 google-sheets/credentials.json
-!google-sheets/*
-!google-sheets/google-api-php-client/
+google-sheets/google-api-php-client/
+google-sheets/token.json
+.vscode/
